@@ -337,4 +337,8 @@ Revision history for Perl extension Net::SSLeay.
 	- Fixed a typo reported by Dan Dascalescu.
 	- added RIPEMD160 digest function.  Patch provided by dkg.
 
+1.??	- Added X509_get_fingerprint, contributed by Thierry Walrant (with
+	minor changes die to the fact that stricmp is not avialable. Cert
+	types must be lowercase. Also added test to 07_sslecho.t
+
 #EOF
